--- a/src/app/client/forget/forget.component.html
+++ b/src/app/client/forget/forget.component.html
@@ -1,2 +1,26 @@
+<div class="row">
 
+    <div class="col-12 mt-1" >
+       <a routerLink="/login"><i class="m-3 fa fa-arrow-left float-left"></i></a>
+    </div> 
+    <div class="col-12 mt-5">
+    	<h3 class="text-center mt-5">Forgot your login info?</h3>
+   		<p class="text-center">An email will be sent to the registered address.</p>
+    
+    </div>
+   
+    <form class="col-12 mt-5 text-center">
+         
+        <div class="row mt-5">
+            <div class="offset-2 col-8 mb-5 mt-5">
+                <input type="email" name="recoveremail" #recoveremail placeholder="Email Address" required class="form-control p-4 input-lg numinput text-center">
+            </div>
+           
+            <div class="offset-3 col-6">
+                <button type="submit" class="btn btn1 btn-block p-2"><h5>RECOVER LOGIN</h5></button>
+            </div> 
+        </div>
+         
+    </form>   
+</div>
     
