--- a/src/app/client/register/register.component.html
+++ b/src/app/client/register/register.component.html
@@ -3,7 +3,7 @@
 
     <h2 class="text-center">Please let us know who to register.</h2>
   </div>
-  <form class=" col-12 text-center mt-3 mb-5" (ngSubmit)="register()" #registerForm="ngForm">
+  <form class=" col-12 text-center mt-3 mb-5" (ngSubmit)="register(registerForm.value)" #registerForm="ngForm">
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
         <input type="text" name="name" placeholder="Full Name" class="form-control p-4 numinput text-center" required
