--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -1,3 +1,87 @@
-<p>
-  navbar works!
-</p>
+<div class="row d-none d-sm-block">
+  <div class="offset-2 col-8">
+    <nav class="navbar navbar-expand-md ">
+      <a class="navbar-brand" href="#">Agent-sync</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link mt-1" href="#">Main</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  mt-1" href="#">Price Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mt-1" href="#">Place Order</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mt-1" href="#">My Orders</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mt-1" href="#">Agent</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mt-1" href="#">Admin</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  mt-1" href="#">Profile </a>
+          </li>
+          <li class="nav-item">
+            <span matBadge="4" matBadgeColor="warn">
+              <img src="assets/image/icons/delivery1.png" alt="delivery" class="cart">
+            </span>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
+
+
+  </div>
+</div>
+
+
+
+<div class="row d-block d-sm-none d-md-none d-lg-none d-xl-none">
+  <div class="col-12 navbar">
+    <nav class="navbar navbar-expand-md">
+      <a class="navbar-brand" href="#">Agent-sync</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link mt-2">Main</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  mt-2">Price Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mt-2">Place Order</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mt-2">My Orders</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mt-2">Agent</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link mt-2">Admin</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  mt-2">Profile </a>
+          </li>
+          <li class="nav-item">
+            <span matBadge="4" matBadgeColor="warn">
+              <img src="assets/image/icons/delivery1.png" alt="delivery" class="cart">
+            </span>
+          </li>
+        </ul>
+
+      </div>
+    </nav>
+  </div>
+</div>
