--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -1,1 +1,27 @@
-<p>Login </p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xd col-6 p-5">
+            <div class="text-right col-12 mt-2"><span class="badge bad float-right con">1</span></div>
+            <div class="text-center col-12 mt-5"><img src="image/df.jpg" class="img-fluid"></div>
+            
+        </div>
+<div class="col-xd col-6 p-5">
+            <div class="text-right col-12 mt-2"><span class="badge bad float-right con p-2">11</span></div>
+            <div class="text-center col-12 mt-5"><img src="image/df2.jpg" class="img-fluid"></div>
+            
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xd col-6 p-5">
+            <div class="text-right col-12 mt-2"><span class="badge bad float-right con">1</span></div>
+            <div class="text-center col-12 mt-5"><img src="image/df.jpg" class="img-fluid"></div>
+            
+        </div>
+        <div class="col-xd col-6 p-5">
+            <div class="text-right col-12 mt-2"><span class="badge bad float-right con">1</span></div>
+            <div class="text-center col-12 mt-5"><img src="image/df.jpg" class="img-fluid"></div>
+            
+        </div>
+    </div>
+    
+</div>
