--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -1,27 +1,33 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-xd col-6 p-5">
-            <div class="text-right col-12 mt-2"><span class="badge bad float-right con">1</span></div>
-            <div class="text-center col-12 mt-5"><img src="image/df.jpg" class="img-fluid"></div>
-            
-        </div>
-<div class="col-xd col-6 p-5">
-            <div class="text-right col-12 mt-2"><span class="badge bad float-right con p-2">11</span></div>
-            <div class="text-center col-12 mt-5"><img src="image/df2.jpg" class="img-fluid"></div>
-            
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-xd col-6 p-5">
-            <div class="text-right col-12 mt-2"><span class="badge bad float-right con">1</span></div>
-            <div class="text-center col-12 mt-5"><img src="image/df.jpg" class="img-fluid"></div>
-            
-        </div>
-        <div class="col-xd col-6 p-5">
-            <div class="text-right col-12 mt-2"><span class="badge bad float-right con">1</span></div>
-            <div class="text-center col-12 mt-5"><img src="image/df.jpg" class="img-fluid"></div>
-            
-        </div>
-    </div>
-    
-</div>
+<div class="row headerimg">
+    <div class="offset-2 col-8 offset-md-4 col-md-3 mx-auto">
+        <img src="/assets/image/icons/logo1.jpg" class="rounded-circle img-fluid">
+        <img src="/assets/image/icons/agentsynclogo.png" class="img-fluid " alt="Agent-sync">
+      </div> 
+        <form class="col-12 text-center mb-5"> 
+            <div class="form-group col-12">
+            <div class="row">
+                    <div class="offset-md-3 col-md-6 col-xs-12">
+                    <input type="email" class="form-control-lg col-12 text-center" placeholder="Email" required>
+                    <input type="password" class="form-control-lg col-12 text-center" placeholder="Password" required>
+            </div>  
+                    </div>    
+            </div>
+            <div class="form-group col-12">
+                    <div class="row">
+                         <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+                          <button type="submit" class="btn btn1 btn-block mx-auto btn-lg p-4">SIGN IN</button>
+                         </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12 text-center">
+                    <button type="button" class="btn btn2">REGISTER ME</button>
+                    
+                    <button type="button" class="btn btn2">FORGOT INFO</button>
+                    </div>
+                    
+                    
+                    </div>
+                  
+                </form>
+        </div>  
