--- a/src/app/agent/agentdashboard/agentdashboard.component.html
+++ b/src/app/agent/agentdashboard/agentdashboard.component.html
@@ -1,19 +1,19 @@
 <div class="container-fluid">
   <nav class="navbar navbar-expand-lg fixed-top navdes" #mainNav>
     <a class="navbar-brand text-white" href="index.html">Agent-sync</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav ml-auto mt-3  mx-5 pl-5" id="logo1"> 
-             
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav ml-auto mt-3  mx-5 pl-5" id="logo1">
+
         <li class="nav-item">
-         
-            <a href="#" data-toggle="modal" data-target="#logoutModal">  <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+
+          <a href="#" data-toggle="modal" data-target="#logoutModal"><i class="fa fa-fw fa-sign-out"></i>Logout</a>
         </li>
-          </ul>
-  </div>  
-</nav>
+      </ul>
+    </div>
+  </nav>
 </div>
 <!-- Small modal -->
 <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-hidden="true">
@@ -24,20 +24,21 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
       </div>
       <div class="modal-body">
-        <p><!-- <i class="fa fa-question-circle"></i> --> Are you sure you want to logout ? <br /></p>
+        <p>
+          <!-- <i class="fa fa-question-circle"></i> --> Are you sure you want to logout ? <br /></p>
       </div>
       <div class="modal-footer">
-              <div class="actionsBtns">
-            <form action="/logout" method="post">
-                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}"/>
-                <input type="submit" class="btn btn1"  data-dismiss="modal" value="Yes" />
-                  <button class="btn btn5"  data-dismiss="modal">Cancel</button>
+        <div class="actionsBtns">
+          <form action="/logout" method="post">
+            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
+            <input type="submit" class="btn btn1" data-dismiss="modal" value="Yes" />
+            <button class="btn btn5" data-dismiss="modal">Cancel</button>
 
 
 
-            </form>
-</div>
-</div>
-</div>
-</div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
