--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -1,40 +1,33 @@
-
-<div class="row">
-    <div class="col-12 mt-5" >
-        
-        <h2 class="text-center">Please let us know <br> who to register.</h2>
-     </div>   
-            <form class=" col-12 text-center mt-3">
-                <div class="row">
-                    <div class="offset-2 col-8 my-2">
-                    <input type="text" name="name" placeholder="Full Name" class="form-control p-3 numinput text-center"  required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-2 col-8 my-2">
-                        <input type="text" name="brokerage" placeholder="Brokerage" class="form-control p-3 numinput text-center" required>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-2 col-8 my-2">
-                        <input type="email" name="email" placeholder="Email Address" class=" form-control p-3 numinput text-center" 
-                            required pattern="[^@]*@[^@]*">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-2 col-8 my-2">
-                        <input type="tel" name="phone" placeholder="Phonenumber" class=" form-control p-3 numinput text-center" 
-                            required pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{4}$" maxlength="10">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="offset-2 col-8 my-2">
-                        <button type="submit" class="btn btninput btn-block mx-auto p-3">REGISTER ME </button>
-                    </div>
-                </div>
-                <p>Already have an account?
-                            <a routerLink="/login" class="btd">Sign In</a>
-                        </p>
-  
-            </form>
+<div class="row headerimg">
+    <div class="offset-2 col-8 offset-md-4 col-md-3 mx-auto">
+        <img src="/assets/image/icons/logo1.jpg" class="rounded-circle img-fluid">
+        <img src="/assets/image/icons/agentsynclogo.png" class="img-fluid " alt="Agent-sync">
+      </div> 
+        <form class="col-12 text-center mb-5"> 
+            <div class="form-group col-12">
+            <div class="row">
+                    <div class="offset-md-3 col-md-6 col-xs-12">
+                    <input type="email" class="form-control-lg col-12 text-center" placeholder="Email" required>
+                    <input type="password" class="form-control-lg col-12 text-center" placeholder="Password" required>
+            </div>  
+                    </div>    
             </div>
+            <div class="form-group col-12">
+                    <div class="row">
+                         <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+                          <button type="submit" class="btn btn1 btn-block mx-auto btn-lg p-4">SIGN IN</button>
+                         </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12 text-center">
+                    <button type="button" class="btn btn2">REGISTER ME</button>
+                    
+                    <button type="button" class="btn btn2">FORGOT INFO</button>
+                    </div>
+                    
+                    
+                    </div>
+                  
+                </form>
+        </div> 
