--- a/src/app/client/address/address.component.html
+++ b/src/app/client/address/address.component.html
@@ -1,3 +1,27 @@
-<p>
-  address works!
-</p>
+<div class="row">
+    <div class="offset-2 col-8 bg-light">
+            <h4 class="text-center p-3">Place New Order</h4>
+            <p class="text-center p-3">Orders are itemized by property,per unit. </p>
+    </div>
+</div>
+ <div class="row">
+    <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+      <input type="text" name="Street Address" placeholder="Street Address" class="form-control p-4 numinput text-center">
+    </div>
+    </div>
+    <div class="row">
+      <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+        <input type="text" name="city,state" placeholder="city,state" class="form-control p-4 numinput text-center">
+        </div>
+      </div>
+      <div class="row">
+        <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+          <input type="text" name="Zip code" placeholder="Zip Code" class="form-control p-4 numinput text-center">
+          </div>
+        </div>
+        <div class="row">
+          <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+            <input type="text" name="Unit Number" placeholder="Unit Number" class="form-control p-4 numinput text-center">
+          </div>
+          </div>
+                 
