--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -1,33 +1,34 @@
 <div class="row headerimg">
-    <div class="offset-2 col-8 offset-md-4 col-md-3 mx-auto">
-        <img src="/assets/image/icons/logo1.jpg" class="rounded-circle img-fluid">
-        <img src="/assets/image/icons/agentsynclogo.png" class="img-fluid " alt="Agent-sync">
-      </div> 
-        <form class="col-12 text-center mb-5"> 
-            <div class="form-group col-12">
-            <div class="row">
-                    <div class="offset-md-3 col-md-6 col-xs-12">
-                    <input type="email" class="form-control-lg col-12 text-center" placeholder="Email" required>
-                    <input type="password" class="form-control-lg col-12 text-center" placeholder="Password" required>
+        <div class="offset-2 col-8 offset-md-4 col-md-3 mx-auto">
+            <img src="/assets/image/icons/logo1.jpg" class="rounded-circle img-fluid">
+            <img src="/assets/image/icons/agentsynclogo.png" class="img-fluid " alt="Agent-sync">
+          </div> 
+            <form class="col-12 text-center mb-5"> 
+                <div class="form-group col-12">
+                <div class="row">
+                        <div class="offset-md-3 col-md-6 col-xs-12">
+                        <input type="email" class="form-control-lg col-12 text-center" placeholder="Email" required>
+                        <input type="password" class="form-control-lg col-12 text-center" placeholder="Password" required>
+                </div>  
+                        </div>    
+                </div>
+                <div class="form-group col-12">
+                        <div class="row">
+                             <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+                              <button type="submit" class="btn btn1 btn-block mx-auto btn-lg p-4">SIGN IN</button>
+                             </div>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-md-12 text-center">
+                        <button type="button" class="btn btn2 mr-2" type="button">REGISTER ME</button>
+                        
+                        <button type="button" class="btn btn2 mr-2" type="button">FORGOT INFO</button>
+                        </div>
+                        
+                        
+                        </div>
+                      
+                    </form>
             </div>  
-                    </div>    
-            </div>
-            <div class="form-group col-12">
-                    <div class="row">
-                         <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-                          <button type="submit" class="btn btn1 btn-block mx-auto btn-lg p-4">SIGN IN</button>
-                         </div>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-md-12 text-center">
-                    <button type="button" class="btn btn2">REGISTER ME</button>
-                    
-                    <button type="button" class="btn btn2">FORGOT INFO</button>
-                    </div>
-                    
-                    
-                    </div>
-                  
-                </form>
-        </div>  
+    
