--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="row d-none d-sm-block">
-  <div class="offset-2 col-8">
+  <div class="col-md-8 mx-auto">
     <nav class="navbar navbar-expand-md ">
       <a class="navbar-brand" href="#">Agent-sync</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -40,7 +40,7 @@
 
 
   </div>
-</div>
+</div> 
 
 
 
