--- a/src/app/client/placeorder/placeorder.component.html
+++ b/src/app/client/placeorder/placeorder.component.html
@@ -1,16 +1,17 @@
 <app-navbar></app-navbar>
+       
 <div class="row">
-        <div class="offset-2 col-8 bg">
+        <div class="col-md-8 mx-auto bg">
                 <h4 class="text-center p-3">Place New Order</h4>
                 <p class="text-center p-3">Orders are itemized by property,per unit. </p>
-        </div>
+        </div>        
 </div>
 <div class="row">
-        <div class="offset-2 col-8">
-                <h3 class="text-center mt-5">What type of property is this?</h3>
+        <div class="col-md-8 mx-auto">
+                <h3 class="text-center mt-3">What type of property is this?</h3>
         </div>
 </div>
-<div class="row">
+<!-- <div class="row">
         <div class="offset-2 col-8">
                 <div class="row mt-5">
                         <div class="col-lg-3 col-6 aa">
@@ -38,4 +39,4 @@
                 <p class="text-center">Slide to view prices</p>
 
         </div>
-</div>
+</div> -->
