--- a/src/app/client/address/address.component.html
+++ b/src/app/client/address/address.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="row">
     <div class="offset-2 col-8 bg-light">
             <h4 class="text-center p-3">Place New Order</h4>
