--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <div class="row d-none d-sm-block">
   <div class="col-md-8 mx-auto">
-    <nav class="navbar navbar-expand-md ">
+    <nav class="navbar navbar-expand-md navbar-dark">
       <a class="navbar-brand" href="#">Agent-sync</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -44,15 +44,20 @@
 
 
 
+
+
+
+
 <div class="row d-block d-sm-none d-md-none d-lg-none d-xl-none">
   <div class="col-12 navbar">
-    <nav class="navbar navbar-expand-md">
-      <a class="navbar-brand" href="#">Agent-sync</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <nav class="navbar fixed-top navbar-expand-md  navbar-dark">
+      
+      <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav ml-auto">
+          <a class="navbar-brand" href="#">Agent-sync</a>
+        <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link mt-2">Main</a>
           </li>
@@ -75,9 +80,7 @@
             <a class="nav-link  mt-2">Profile </a>
           </li>
           <li class="nav-item">
-            <span matBadge="4" matBadgeColor="warn">
-              <img src="assets/image/icons/delivery1.png" alt="delivery" class="cart">
-            </span>
+            
           </li>
         </ul>
 
