--- a/src/app/client/navbar/navbar.component.css
+++ b/src/app/client/navbar/navbar.component.css
@@ -7,5 +7,13 @@
   color: #fff;
 }
 .cart{
-    width:60px;
+    width:3vw;
+}
+.phcart{
+  width:10vw;
+}
+@media only screen and (min-width: 700px){
+  .phcart{
+    width:5vw;
+  }
 }
