--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -1,44 +1,43 @@
-<div class="row d-none d-sm-block">
-  <div class="col-md-8 mx-auto">
-    <nav class="navbar navbar-expand-md navbar-dark">
-      <a class="navbar-brand" href="#">Agent-sync</a>
+<div class="row d-md-block d-lg-block">
+    <div class="col-md-8 mx-auto">
+    <nav class="navbar navbar-expand-xl navbar-dark">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link mt-1" href="#">Main</a>
+            <a class="nav-link m-2" href="#">Main</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  mt-1" href="#">Price Menu</a>
+            <a class="nav-link  m-2" href="#">Price Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-1" href="#">Place Order</a>
+            <a class="nav-link m-2" href="#">Place Order</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-1" href="#">My Orders</a>
+            <a class="nav-link m-2" href="#">My Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-1" href="#">Agent</a>
+            <a class="nav-link m-2" href="#">Agent</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-1" href="#">Admin</a>
+            <a class="nav-link m-2" href="#">Admin</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  mt-1" href="#">Profile </a>
+            <a class="nav-link  m-2" href="#">Profile </a>
           </li>
           <li class="nav-item">
+            <a class="nav-link m-2">
             <span matBadge="4" matBadgeColor="warn">
               <img src="assets/image/icons/delivery1.png" alt="delivery" class="cart">
             </span>
+            </a>
           </li>
         </ul>
 
       </div>
     </nav>
-
-
   </div>
 </div> 
 
@@ -48,43 +47,45 @@
 
 
 
-<div class="row d-block d-sm-none d-md-none d-lg-none d-xl-none">
-  <div class="col-12 navbar">
-    <nav class="navbar fixed-top navbar-expand-md  navbar-dark">
-      
-      <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+
+<div class="row d-md-block d-sm-block d-lg-block d-xl-none">
+  <div class="col-12">
+    <nav class="navbar fixed-top navbar-expand-xl  navbar-dark">
+       
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
+      
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <a class="navbar-brand" href="#">Agent-sync</a>
+         
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link mt-2">Main</a>
+            <a class="nav-link m-2">Main</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  mt-2">Price Menu</a>
+            <a class="nav-link  m-2">Price Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-2">Place Order</a>
+            <a class="nav-link m-2">Place Order</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-2">My Orders</a>
+            <a class="nav-link m-2">My Orders</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-2">Agent</a>
+            <a class="nav-link m-2">Agent</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mt-2">Admin</a>
+            <a class="nav-link m-2">Admin</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link  mt-2">Profile </a>
-          </li>
-          <li class="nav-item">
-            
+            <a class="nav-link  m-2">Profile </a>
           </li>
         </ul>
 
       </div>
+      <span matBadge="4" matBadgeColor="warn">
+          <img src="assets/image/icons/delivery1.png" alt="delivery" class="phcart ml-auto">
+      </span>
     </nav>
   </div>
 </div>
