--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -1,25 +1,38 @@
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-  <!-- Brand -->
-  <a class="navbar-brand" href="#">Navbar</a>
-
-  <!-- Toggler/collapsibe Button -->
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <!-- Navbar links -->
-  <div class="collapse navbar-collapse" id="collapsibleNavbar">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-    </ul>
-  </div>
-</nav>
 <app-navbar></app-navbar>
+<div class="row">
+  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-2">
+    <div class="col-md-12 p-2 ">
+      <h3 class="text-center text-white">Welcome</h3>
+  
+      <p class="text-center text-white">placeorder</p>
+      <p class="text-center text-white">placeorder</p>
+    </div>
+  </div>
+</div>
+<div class="row">
+    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+          <div class="row  m-lg-3 m-md-5 my-5">
+            <div class="col-xd col-6 ">
+              <div class="position-absolute" style="right:0"><span class="bad float-right con text-center pt-2 ">11</span></div>
+              <div class="mx-auto col-lg-8 col-12"><img src="/assets/image/icons/p1.jpg" class="img-fluid " id="placeorder"></div>
+          
+            </div>
+            <div class="col-xd col-6 ">
+              <div class="position-absolute" style="right:0"><span class="bad float-right con  text-center pt-2">2</span></div>
+              <div class="mx-auto col-lg-8 col-12  "><img src="/assets/image/icons/p3.jpg" class="img-fluid " id="myorder"></div>
+          
+            </div>
+          </div>
+          <div class="row m-lg-3 m-md-5 my-5">
+            <div class=" col-xd col-6 ">
+              <div class="position-absolute" style="right:0"><span class="bad text-right p-2">3</span></div>
+              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/df11.png" class="img-fluid" id="myaccount"></div>
+          
+            </div>
+            <div class="col-xd col-6 ">
+              <div class="position-absolute" style="right:0"><span class="bad text-right p-2">44</span></div>
+              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/df11.png" class="img-fluid" id="delivery"></div>
+          
+            </div>
+    </div>  
+</div>
