--- a/src/app/client/navbar/navbar.component.css
+++ b/src/app/client/navbar/navbar.component.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   background-color: #636363;
   color:#fff;
 
@@ -16,4 +16,9 @@
   .phcart{
     width:5vw;
   }
+} */
+.poab{
+  position: absolute;
+  top:0;
+  right: 0;
 }
