--- a/src/app/client/dashboard/dashboard.component.html
+++ b/src/app/client/dashboard/dashboard.component.html
@@ -13,8 +13,8 @@
     <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
           <div class="row  m-lg-3 m-md-5 my-5">
             <div class="col-xd col-6 ">
-              <div class="position-absolute" style="right:0"><span class="bad float-right con text-center pt-2 ">11</span></div>
-              <div class="mx-auto col-lg-8 col-12"><img src="/assets/image/icons/p1.jpg" class="img-fluid " id="placeorder"></div>
+              
+              <div class="mx-auto col-lg-8 col-12"><span class="badge" matBadge="8" matBadgeColor="warn"><img src="/assets/image/icons/p1.jpg" class="img-fluid " id="placeorder"></span></div>
           
             </div>
             <div class="col-xd col-6 ">
@@ -26,13 +26,49 @@
           <div class="row m-lg-3 m-md-5 my-5">
             <div class=" col-xd col-6 ">
               <div class="position-absolute" style="right:0"><span class="bad text-right p-2">3</span></div>
-              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/df11.png" class="img-fluid" id="myaccount"></div>
+              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/p5.jpg" class="img-fluid" id="myaccount"></div>
           
             </div>
             <div class="col-xd col-6 ">
               <div class="position-absolute" style="right:0"><span class="bad text-right p-2">44</span></div>
-              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/df11.png" class="img-fluid" id="delivery"></div>
+              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/p7.jpg" class="img-fluid" id="delivery"></div>
           
             </div>
     </div>  
 </div>
+<!-- <app-navbar></app-navbar>
+<div class="row">
+  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-2">
+    <div class="col-md-12 p-2 ">
+      <h3 class="text-center text-white">Welcome</h3>
+  
+      <p class="text-center text-white">placeorder</p>
+      <p class="text-center text-white">placeorder</p>
+    </div>
+  </div>
+</div>
+<div class="row">
+    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+          <div class="row  m-lg-3 m-md-5 my-5">
+            <div class="col-xd col-6 ">
+              <div class="mx-auto col-lg-8 col-12"><span class="badge" matBadge="4" matBadgeColor="warn"><img src="/assets/image/icons/p1.jpg" class="img-fluid " id="placeorder"></span></div>
+          
+            </div>
+            <div class="col-xd col-6 ">
+              
+              <div class="mx-auto col-lg-8 col-12  "><span class="badge" matBadge="4" matBadgeColor="warn"><img src="/assets/image/icons/p3.jpg" class="img-fluid " id="myorder"></span></div>
+          
+            </div>
+          </div>
+          <div class="row m-lg-3 m-md-5 my-5">
+            <div class=" col-xd col-6 ">
+            
+              <div class="mx-auto col-lg-8 col-12 "><span class="badge" matBadge="4" matBadgeColor="warn"><img src="/assets/image/icons/p5.jpg" class="img-fluid" id="myaccount"></span></div>
+          
+            </div>
+            <div class="col-xd col-6 ">
+              <div class="mx-auto col-lg-8 col-12 "><span class="badge" matBadge="4" matBadgeColor="warn"><img src="/assets/image/icons/p7.jpg" class="img-fluid" id="delivery"></span></div>
+          
+            </div>
+    </div>  
+</div> -->
