--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -7,13 +7,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav mx-auto my-2 nav-fill w-75">
               <li class="nav-item ">
-                  <a class="nav-link ">Main</a>
+                  <a class="nav-link" routerLink="/main">Main</a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link  ">Price Menu</a>
+                  <a class="nav-link" routerLink="/">Price Menu</a>
                 </li>
                 <li class="nav-item ">
-                  <a class="nav-link ">Place Order</a>
+                  <a class="nav-link" routerLink="/placeorder">Place Order</a>
                 </li>
                 <li class="nav-item ">
                   <a class="nav-link ">My Orders</a>
