--- a/src/app/client/placeorder/placeorder.component.html
+++ b/src/app/client/placeorder/placeorder.component.html
@@ -1,42 +1,35 @@
 <app-navbar></app-navbar>
-       
 <div class="row">
-        <div class="col-md-8 mx-auto bg">
-                <h4 class="text-center my-5">Place New Order</h4>
-                <p class="text-center">Orders are itemized by property,per unit. </p>
-        </div>        
+  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12 p-2">
+    <div class="col-md-12 p-2 ">
+      <h3 class="text-center text-white">Place New Order</h3>
+  
+      <p class="text-center text-white">Orders are itemized by property,per unit.</p>
+    </div>
+  </div>
 </div>
 <div class="row">
-        <div class="col-md-8 mx-auto">
-                <h3 class="text-center mt-5">What type of property is this?</h3>
-        </div>
-</div>
-<div class="row">
-        <div class="col-md-8 col-12 mx-auto">
-                <div class="row mt-3">
-                        <div class="col-md-3 col-6">
-                                <a><img src="/assets/image/icons/pic2.png" class="img-circle img-fluid aa" alt="House">
-                                </a>
-                        </div>
-                        <div class="col-md-3 col-6">
-                                <a><img src="/assets/image/icons/pic3.png" class="img-circle img-fluid aa" alt="Townhome">
-                                </a>
-                        </div>
-                        <div class="col-md-3 col-6">
-                                <a><img src="/assets/image/icons/pic4.png" class="img-circle img-fluid aa" alt="Appartment">
-                                </a>
-                        </div>
-                        <div class="col-md-3 col-6">
-                                <a><img src="/assets/image/icons/pic2.png" class="img-circle img-fluid aa" alt="Commercial">
-                                </a>
-                        </div>
-                </div>
-        </div>
-</div>
-<div class="row">
-        <div class="col-md-8 mx-auto mt-5">
-                <i class="fa fa-angle-up mx-auto"></i>
-                <p class="text-center">Slide to view prices</p>
-
-        </div>
-</div>
+    <div class="offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+          <div class="row  m-lg-3 m-md-5 my-5">
+            <div class="col-xd col-6 ">
+              <div class="mx-auto col-lg-8 col-12"><img src="/assets/image/icons/pic2.png"  class="img-circle img-fluid" alt="House" ></div>
+          
+            </div>
+            <div class="col-xd col-6 ">
+                     <div class="mx-auto col-lg-8 col-12  "><img src="/assets/image/icons/pic3.png"  class="img-circle img-fluid" alt="Townhome" ></div>
+          
+            </div>
+          </div>
+          <div class="row m-lg-3 m-md-5 my-5">
+            <div class=" col-xd col-6 ">
+              
+              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/pic4.png"  class="img-circle img-fluid" alt="Appartment" ></div>
+          
+            </div>
+            <div class="col-xd col-6 ">
+        
+              <div class="mx-auto col-lg-8 col-12 "><img src="/assets/image/icons/pic2.png"  class="img-circle img-fluid" alt="Commercial" ></div>
+          
+            </div>
+    </div>  
+</div>          
