--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -6,26 +6,26 @@
         </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav mx-auto my-2 nav-fill w-75">
-              <li class="nav-item ">
+              <li class="nav-item">
                   <a class="nav-link" routerLink="/main">Main</a>
                 </li>
-                <li class="nav-item ">
+                <li class="nav-item">
                   <a class="nav-link" routerLink="/">Price Menu</a>
                 </li>
-                <li class="nav-item ">
+                <li class="nav-item">
                   <a class="nav-link" routerLink="/placeorder">Place Order</a>
                 </li>
-                <li class="nav-item ">
-                  <a class="nav-link ">My Orders</a>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/myorder">My Orders</a>
                 </li>
-                <li class="nav-item ">
-                  <a class="nav-link ">Agent</a>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/aglogin">Agent</a>
                 </li>
-                <li class="nav-item ">
-                  <a class="nav-link ">Admin</a>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/adlogin">Admin</a>
                 </li>
-                <li class="nav-item ">
-                  <a class="nav-link  ">Profile </a>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink="/profile">Profile </a>
                 </li>  
                 
           </ul>
