--- a/src/app/client/products/products.component.html
+++ b/src/app/client/products/products.component.html
@@ -1,3 +1,6 @@
-<p>
-  products works!
-</p>
+<div class="row mb-5">
+  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="col-md-12 p-2 ">
+          <h4 class="text-center p-3">New Order > First Unit</h4>
+          <p class="text-center p-3">Property Size </p>
+    </div>
