--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<div class="container-fluid">
+  
+    <router-outlet></router-outlet>
 
+
+</div>
