--- a/src/app/client/navbar/navbar.component.html
+++ b/src/app/client/navbar/navbar.component.html
@@ -1,87 +1,43 @@
-<div class="row d-none d-sm-block">
-  <div class="offset-2 col-8">
-    <nav class="navbar navbar-expand-md ">
-      <a class="navbar-brand" href="#">Agent-sync</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link mt-1" href="#">Main</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link  mt-1" href="#">Price Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mt-1" href="#">Place Order</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mt-1" href="#">My Orders</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mt-1" href="#">Agent</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mt-1" href="#">Admin</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link  mt-1" href="#">Profile </a>
-          </li>
-          <li class="nav-item">
-            <span matBadge="4" matBadgeColor="warn">
-              <img src="assets/image/icons/delivery1.png" alt="delivery" class="cart">
-            </span>
-          </li>
-        </ul>
 
-      </div>
-    </nav>
+<div class="row">
+<nav class="navbar navbar-expand-md bg-dark navbar-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
 
-
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav mx-auto my-2 nav-fill w-75">
+          <li class="nav-item ">
+              <a class="nav-link ">Main</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link  ">Price Menu</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link ">Place Order</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link ">My Orders</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link ">Agent</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link ">Admin</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link  ">Profile </a>
+            </li>  
+            
+      </ul>
+    </div> 
+    <div class="poab pt-3 p-2 mx-5">
+        <span matBadge="4" matBadgeColor="warn">
+            <img src="assets/image/icons/delivery2.png" alt="delivery" class="cart ml-auto">
+        </span>
+    </div> 
+  </nav>
+  
   </div>
-</div>
-
-
-
-<div class="row d-block d-sm-none d-md-none d-lg-none d-xl-none">
-  <div class="col-12 navbar">
-    <nav class="navbar navbar-expand-md">
-      <a class="navbar-brand" href="#">Agent-sync</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link mt-2">Main</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link  mt-2">Price Menu</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mt-2">Place Order</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mt-2">My Orders</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mt-2">Agent</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mt-2">Admin</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link  mt-2">Profile </a>
-          </li>
-          <li class="nav-item">
-            <span matBadge="4" matBadgeColor="warn">
-              <img src="assets/image/icons/delivery1.png" alt="delivery" class="cart">
-            </span>
-          </li>
-        </ul>
-
-      </div>
-    </nav>
-  </div>
-</div>
+  
+  
