--- a/src/app/client/login/login.component.css
+++ b/src/app/client/login/login.component.css
@@ -32,9 +32,9 @@ input{
         background-color:#A1A1A1;
         border-radius:20vh;
         line-height: 2vw;
-        width: 18vw;
+      
     }    
-    @media screen and(min-width:750){
+    @media screen and(max-width:750){
         .btn1
   {
     color: white;
@@ -46,7 +46,7 @@ input{
         background-color:#A1A1A1;
         border-radius:20vh;
         line-height: 4vw;
-        width: 28vw;
-    }   
-
+       
+    }    
+    
     }
