--- a/src/app/client/products/products.component.html
+++ b/src/app/client/products/products.component.html
@@ -1,6 +1,68 @@
+<app-navbar></app-navbar>
 <div class="row mb-5">
   <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
     <div class="col-md-12 p-2 ">
-          <h4 class="text-center p-3">New Order > First Unit</h4>
-          <p class="text-center p-3">Property Size </p>
-    </div>
+          <h2 class="text-center text-white p-3">New Order > First Unit</h2>
+          <h4 class="text-center p-3">Products </h4>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-4 text-left">
+              <h4>BACK</h4>
+          </div>
+          <div class="col-md-4 col-4 text-center">
+            <h5>Subtotal:</h5>
+            </div>
+          <div class="col-md-4 col-4 text-right">
+            <h4>NEXT</h4>
+          </div>
+        </div>
+        </div>
+        </div>
+        <div class="row text-center">
+          <div class="offset-md-3 col-md-6 col-xs-12">
+            <h1>What Products are needed at this unit?</h1>
+            <h3>*Please Select all that apply.</h3>
+          </div>
+        </div>
+        <div class="row offset-3">
+            <div class="col-md-4 col-xs-12 my-2">
+               <button type="button" class="btn btn btn-md btn-block ">Photography</button>
+            </div>
+            <div class="col-md-4 col-xs-12 my-2">
+              <button type="button" class="btn btn btn-md btn-block "> Video Tour</button>
+            </div>
+        </div>
+        <div class="row offset-3">
+              <div class="col-md-4 col-xs-12 my-2">
+                <button type="button" class="btn btn btn-md btn-block ">360 Tour</button>
+              </div>
+              <div class="col-md-4 col-xs-12 my-2">
+                <button type="button" class="btn btn btn-md btn-block">Single Property Website</button>
+              </div>
+        </div>
+        <div class="row offset-3">
+              <div class="col-md-4 col-xs-12 my-2">
+                <button type="button" class="btn btn btn-md btn-block">Floor Plans(B&W)</button>
+              </div>
+              <div class="col-md-4 col-xs-12 my-2">
+                <button type="button" class="btn btn btn-md btn-block">Floor Plans(Color) </button>
+              </div>
+        </div>
+          <div class="row offset-3">
+              <div class="col-md-4 col-xs-12 my-2">
+          <button type="button" class="btn btn btn-md btn-block">Floor Plans(Color+Furniture)</button>
+              </div>
+          <div class="col-md-4 col-xs-12 my-2">
+            <button type="button" class="btn btn btn-md btn-block">Double-Sided Flyer</button>
+              </div>
+          </div>
+          <div class="row offset-3">
+              <div class="col-md-4 col-xs-12 my-2">
+                  <button type="button" class="btn btn btn-md btn-block">Brochure(8 Page)</button>
+              </div>
+              <div class="col-md-4 col-xs-12 my-2">
+                  <button type="button" class="btn btn btn-md btn-block">Brochure(4 Page)</button>
+              </div>
+          </div>
+          
+  <app-footer></app-footer>
