--- a/src/app/client/thanks/thanks.component.html
+++ b/src/app/client/thanks/thanks.component.html
@@ -1,7 +1,7 @@
 <div class="row background">
   <div class="col-12 mt-5">
-    <h3 class="text-center mt-5">Thanks!</h3>
-    <p class="text-center">An email will be sent to the registered address.</p>
+    <h2 class="text-center mt-5">Thanks!</h2>
+    <h4 class="text-center">An email will be sent to the registered address.</h4>
   </div>
   <form class="col-12 mt-5 text-center">
 
