--- a/src/app/client/register/register.component.html
+++ b/src/app/client/register/register.component.html
@@ -8,7 +8,7 @@
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
         <p class="error text-center">{{ (error | async)?.message }}</p>
         <input type="text" name="name" placeholder="Full Name" class="form-control p-4 numinput text-center" required
-          minlength="4" [(ngModel)]="cli.name" #name="ngModel">
+          minlength="4" [(ngModel)]="cli.name" #name="ngModel" autocomplete="name">
       </div>
       <div *ngIf="name.invalid && (name.dirty || name.touched)" class="alert alert-danger offset-md-3 col-md-6 col-xs-12 my-2">
 
@@ -42,7 +42,7 @@
     <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
         <input type="email" name="email" placeholder="Email Address" class="form-control p-4 numinput text-center"
-          required pattern="[^@]*@[^@]*" [(ngModel)]="cli.email" #email="ngModel">
+          required pattern="[^@]*@[^@]*" [(ngModel)]="cli.email" #email="ngModel" autocomplete="email">
       </div>
       <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger offset-md-3 col-md-6 col-xs-12 my-2">
 
@@ -58,7 +58,7 @@
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
         <input type="tel" name="phone" placeholder="Phonenumber" class=" form-control p-4 numinput text-center"
           required pattern="^(\+\d{1,2}\s)?\(?\d{3}\)?[\s.-]?\d{3}[\s.-]?\d{4}$" maxlength="10" [(ngModel)]="cli.phone"
-          #phone="ngModel">
+          #phone="ngModel" autocomplete="tel">
       </div>
       <div *ngIf="phone.invalid && (phone.dirty || phone.touched)" class="alert alert-danger offset-md-3 col-md-6 col-xs-12 my-2">
 
