--- a/src/app/client/access/access.component.html
+++ b/src/app/client/access/access.component.html
@@ -20,23 +20,32 @@
 </div>
 <div class="row text-center">
     <div class="offset-md-3 col-md-6 col-xs-12">
-      <h3>Are there any add-ons you need to apply to this product?</h3>
-      <p>*Please Select all that apply.<p>
+      <h3>How will you access the property?</h3>
     </div>
   </div>
   <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block ">Community Shots(+$50)</button>
+          <button type="button" class="btn btn-lg btn-block ">Meet agent on site</button>
       </div>
   </div>
   <div class="row">
           <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-          <button type="button" class="btn btn1 btn-lg btn-block ">Twlight Shots(+$50)</button>
+          <button type="button" class="btn btn-lg btn-block ">Lockbox</button>
           </div>
   </div>
   <div class="row">
       <div class="offset-md-3 col-md-6 col-xs-12 my-2">
-      <button type="button" class="btn btn1 btn-lg btn-block ">Rush Fee(+$75)</button>
+      <button type="button" class="btn btn-lg btn-block ">Access Code</button>
+      </div>
+  </div>
+  <div class="row">
+      <div class="offset-md-3 col-md-6 col-xs-12 my-2">
+      <button type="button" class="btn btn-lg btn-block ">Other</button>
+      </div>
+  </div>
+  <div class="row">
+      <div class="offset-md-3 col-md-6 col-xs-12 my-5">
+      <button type="button" class="btn-lg btn-block btn1">Code?</button>
       </div>
   </div>
   <app-footer></app-footer>
