--- a/src/app/client/comments/comments.component.html
+++ b/src/app/client/comments/comments.component.html
@@ -1,3 +1,31 @@
-<p>
-  comments works!
-</p>
+<app-navbar></app-navbar>
+<div class="row mb-5">
+  <div class="bg-dark offset-lg-2 col-lg-8 col-md-12 col-xs-12 col-sm-12">
+    <div class="col-md-12">
+          <h3 class="text-center text-white">New Order > First Unit</h3>
+          <h4 class="text-center">Products </h4>
+    </div>
+        <div class="row">
+          <div class="col-md-4 col-4 text-left">
+              <h5 class="text-white">BACK</h5>
+          </div>
+          <div class="col-md-4 col-4 text-center">
+            <h5>Subtotal:</h5>
+          </div>
+          <div class="col-md-4 col-4 text-right">
+            <h5 class="text-white">NEXT</h5>
+          </div>
+        </div>
+  </div>
+</div>
+<div class="row text-center">
+  <div class="offset-md-3 col-md-6 col-xs-12">
+    <h3>Please add any additional notes on this order</h3>
+  </div>
+</div>
+<div class="row text-center">
+  <div class="offset-md-3 col-md-6 col-xs-12">
+      <span class="border"></span> 
+  </div>
+</div>
+<app-footer></app-footer>
